[tool.poetry]
name = "pretty_plz"
version = "0.1.3"
description = "pretty_plz is a tool that turns utility scripts into runnable commands"
authors = ["Tamás Szelei <szelei.t@gmail.com>"]
license = "MIT"
homepage = "https://github.com/sztomi/pretty_plz/"
repository = "https://github.com/sztomi/pretty_plz/"
keywords = ["productivity", "commandline", "cli"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
plz = "pretty_plz.main:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
